Added transition between pages and tasks render

--- a/src/index.html
+++ b/src/index.html
@@ -9,52 +9,54 @@
 </head>
 
 
-
-<body>
-    <section class="start">
-        <div class="container">
-            <div class="header">
-                <a class="logo" href="#">
-                    <div class="logo__img-box"></div>
-                    <span class="logo__text">RBTSV</span>
-                </a>
-            </div>
-           <div class="content">
-                <p class="content__description line-1">
-                    It’s a simple planner that’ll help you to keep
-                </p>
-                <p class="content__description line-2"> all of your business in one place </p>
-                <div class="content__try try">
-                    <a href="#" class="try__link">Try it now</a>
+<body data-barba="wrapper">
+    <main data-barba="container" data-barba-namespace="home">
+        <section class="start">
+            <div class="container">
+                <div class="header">
+                    <a class="logo" href="#">
+                        <div class="logo__img-box"></div>
+                        <span class="logo__text">RBTSV</span>
+                    </a>
                 </div>
-                <img src="img/start-page.png" alt="as" class="content__img">
-           </div>
-        </div>
-    </section>
-
-    <section class="footer">
-        <div class="container"> 
-            <ul class="footer__contacts contacts">
-                <li class="contacts__item">
-                    <a class="contacts__item-link" href="https://github.com/CodeLearningSlayer" target="_blank">
-                        <img src="@img/contacts/github.svg" alt="github" class="contacts__item-img">
-                    </a>
-                </li>
-                <li class="contacts__item">
-                    <a href="https://vk.com/maximrubtsov" class="contacts__item-link">
-                        <img src="@img/contacts/vk.svg" alt="vk" class="contacts__item-img">
-                    </a>
-                </li>
-                <li class="contacts__item">
-                    <a href="tg://resolve?domain=@gibb4ansk1y" class="contacts__item-link">
-                        <img src="@img/contacts/telegram.svg" alt="telegram class="contacts__item-img">
-                    </a>
-                </li>
-            </ul>
-            <p class="footer__text">Created by Maxim Rubtsov</p>
-        </div>
-    </section>
-
+               <div class="content">
+                    <p class="content__description line-1">
+                        It’s a simple planner that’ll help you to keep
+                    </p>
+                    <p class="content__description line-2"> all of your business in one place </p>
+                    <div class="content__try try">
+                        <a href="app.html" class="try__link">Try it now</a>
+                    </div>
+                    <img src="img/start-page.png" alt="as" class="content__img">
+               </div>
+            </div>
+        </section>
+    
+        <section class="footer">
+            <div class="container"> 
+                <ul class="footer__contacts contacts">
+                    <li class="contacts__item">
+                        <a class="contacts__item-link" href="https://github.com/CodeLearningSlayer" target="_blank">
+                            <img src="@img/contacts/github.svg" alt="github" class="contacts__item-img">
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="https://vk.com/maximrubtsov" class="contacts__item-link">
+                            <img src="@img/contacts/vk.svg" alt="vk" class="contacts__item-img">
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="tg://resolve?domain=@gibb4ansk1y" class="contacts__item-link">
+                            <img src="@img/contacts/telegram.svg" alt="telegram class="contacts__item-img">
+                        </a>
+                    </li>
+                </ul>
+                <p class="footer__text">Created by Maxim Rubtsov</p>
+            </div>
+        </section>
+    </main>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
-<script src="js/app.min.js"></script>
 </html>
